@@ -5,9 +5,11 @@ import com.example.entity.General.Faculty;
 import com.example.mapper.FacultyMapper;
 import com.example.service.FacultyServ;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/faculties")
@@ -15,28 +17,49 @@ import java.util.List;
 public class FacultyController {
 
     private final FacultyServ facultyServ;
+    private final FacultyMapper   facultyMapper;
 
     @PostMapping
-    public FacultyDto create(@RequestBody FacultyDto facultyDto) {
-        Faculty faculty = FacultyMapper.toEntity(facultyDto);
-        return FacultyMapper.toDto(facultyServ.save(faculty));
+    public ResponseEntity<FacultyDto> create(@RequestBody FacultyDto facultyDto) {
+        // map DTO → entity, save, then map back
+        Faculty saved = facultyServ.save(facultyMapper.toEntity(facultyDto));
+        return ResponseEntity.ok(facultyMapper.toDto(saved));
     }
 
     @GetMapping
-    public List<FacultyDto> list() {
-        return facultyServ.getAll().stream()
-                .map(FacultyMapper::toDto)
-                .toList();
+    public ResponseEntity<List<FacultyDto>> list() {
+        List<FacultyDto> dtos = facultyServ.getAll().stream()
+                .map(facultyMapper::toDto)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(dtos);
     }
 
     @GetMapping("/{code}")
-    public FacultyDto byCode(@PathVariable String code) {
-        return FacultyMapper.toDto(facultyServ.getByCode(code));
+    public ResponseEntity<FacultyDto> byCode(@PathVariable String code) {
+        Faculty faculty = facultyServ.getByCode(code);
+        return ResponseEntity.ok(facultyMapper.toDto(faculty));
+    }
+
+    @PutMapping("/{code}")
+    public ResponseEntity<FacultyDto> update(
+            @PathVariable String code,
+            @RequestBody FacultyDto facultyDto) {
+
+        // fail early if not exists
+        facultyServ.getByCode(code);
+
+        // rebuild entity (keep PK unchanged)
+        Faculty toSave = facultyMapper.toEntity(facultyDto);
+        toSave.setCode(code);
+
+        Faculty updated = facultyServ.save(toSave);
+        return ResponseEntity.ok(facultyMapper.toDto(updated));
     }
 
     @DeleteMapping("/{code}")
-    public void delete(@PathVariable String code) {
+    public ResponseEntity<Void> delete(@PathVariable String code) {
         facultyServ.deleteByCode(code);
+        return ResponseEntity.noContent().build();
     }
 }
 
